--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "build": "gulp build"
   },
   "license": "ISC"
 }
