--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "fast-simplex-noise": "^3.2.1",
     "three": "^0.110.0",
     "three-orbitcontrols-ts": "^0.1.2"
   }
