🌚 Improve gh-actions build step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: sudo npm install -g yarn
 
       - name: Install and Build
-      - run: |
+        run: |
           yarn
           yarn build
 
