--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.1",
     "parcel": "^1.12.4",
     "sass": "^1.23.7",
     "typescript": "^3.7.2"
